--- a/index.html
+++ b/index.html
@@ -63,4 +63,187 @@
         .logo i { color: var(--primary-color); }
         nav ul { display: flex; list-style: none; }
         nav ul li { margin-left: 30px; }
-        nav
+        nav ul li a { color: var(--text-color); text-decoration: none; font-weight: 500; transition: color 0.3s ease; }
+        nav ul li a:hover { color: var(--primary-color); }
+        .hero { min-height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; background: linear-gradient(rgba(4, 12, 24, 0.6), rgba(4, 12, 24, 0.6)), url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop') no-repeat center center/cover; }
+        .hero-content { padding-top: 40px; }
+        .hero-content h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 1rem; line-height: 1.2; color: #fff; }
+        .hero-content h1 span { color: var(--primary-color); }
+        .hero-content .sub-headline { font-size: 1.2rem; max-width: 700px; margin: 0 auto 2rem; color: #e0e0e0; font-style: italic;}
+        .btn { display: inline-block; padding: 14px 32px; color: #fff; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; cursor: pointer; border: none; background-image: linear-gradient(to right, #0062E6, #33AEFF); box-shadow: 0 4px 15px 0 rgba(0, 118, 255, 0.35); }
+        .btn:hover { background-image: linear-gradient(to right, #33AEFF, #0062E6); transform: translateY(-3px); box-shadow: 0 6px 20px 0 rgba(0, 118, 255, 0.5); }
+        section { padding: 100px 0; }
+        .section-title { text-align: center; margin-bottom: 3rem; font-size: 2.5rem; font-weight: 600; }
+        .step-card, .faq-item { background: var(--card-bg-color); padding: 2rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+        .step-card i { font-size: 3rem; color: var(--primary-color); margin-bottom: 1rem; }
+        .step-card h3 { font-size: 1.5rem; margin-bottom: 0.5rem; }
+        #deliverables { background-color: var(--secondary-color); }
+        .deliverables-gallery { border: 1px solid var(--border-color); border-radius: 10px; overflow: hidden; margin-top: 2rem; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
+        .deliverables-gallery img { width: 100%; height: auto; display: block; }
+        .sample-report-cta { text-align: center; margin-top: 3rem; }
+        .sample-report-cta p { margin-bottom: 1rem; font-size: 1.1rem; }
+        .free-sample-cta { text-align: center; background-color: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; margin: 3rem auto; border: 1px solid var(--primary-color); max-width: 800px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+        .free-sample-cta h3 { font-size: 1.5rem; margin-bottom: 0.5rem; }
+        .free-sample-cta p { margin-bottom: 1.5rem; color: var(--text-color-light); }
+        .pricing-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2.5rem; max-width: 800px; margin: 0 auto; }
+        .pricing-card { background: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center; transition: transform 0.3s ease, box-shadow 0.3s ease; display: flex; flex-direction: column; }
+        .pricing-card:hover { transform: translateY(-10px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); }
+        .pricing-card h3 { font-size: 1.8rem; margin-bottom: 1rem; }
+        .price { font-size: 3rem; font-weight: 700; margin-bottom: 0.5rem; color: var(--primary-color); }
+        .pricing-card p { font-size: 1rem; color: var(--text-color-light); margin-bottom: 1.5rem; min-height: 48px; }
+        .pricing-card ul { list-style: none; margin-bottom: 2rem; text-align: left; flex-grow: 1; }
+        .pricing-card ul li { margin-bottom: 0.75rem; }
+        .pricing-card ul li i { color: var(--success-color); margin-right: 10px; }
+        .pricing-card .btn { width: 100%; margin-top: auto; }
+        .faq-grid { grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
+        .faq-item { text-align: left; border-left: 4px solid var(--primary-color); }
+        .faq-item h3 { margin-bottom: 0.5rem; }
+        #about { background-color: var(--secondary-color); }
+        #about p { text-align: center; max-width: 700px; margin: 0 auto; font-size: 1.2rem; line-height: 1.8; }
+        .contact-form-container { max-width: 700px; margin: 0 auto; background: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+        .form-group { margin-bottom: 1.5rem; text-align: left; }
+        .form-group label { display: block; margin-bottom: 8px; font-weight: 600; }
+        .form-group input, .form-group textarea { width: 100%; padding: 12px; background-color: var(--background-color); border: 1px solid var(--border-color); border-radius: 5px; color: var(--text-color); font-family: 'Poppins', sans-serif; font-size: 1rem; }
+        .form-group textarea { resize: vertical; min-height: 120px; }
+        footer { text-align: center; padding: 3rem 0; background-color: #343a40; border-top: 1px solid var(--border-color); color: #fff; }
+        .footer-content { display: flex; justify-content: space-around; align-items: flex-start; flex-wrap: wrap; gap: 2rem; max-width: 600px; margin: 0 auto 2rem auto; }
+        .footer-col h4 { margin-bottom: 1rem; color: #fff; }
+        .footer-col ul { list-style: none; }
+        .footer-col ul li { margin-bottom: 0.5rem; }
+        .footer-col a { color: #e0e0e0; text-decoration: none; }
+        .footer-col a:hover { color: var(--primary-color); }
+        .modal-overlay { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.6); justify-content: center; align-items: center; }
+        .modal-content { background-color: var(--card-bg-color); margin: auto; padding: 30px; border: 1px solid var(--border-color); border-radius: 10px; width: 90%; max-width: 500px; position: relative; box-shadow: 0 5px 15px rgba(0,0,0,0.2); }
+        .close-button { color: #aaa; float: right; font-size: 28px; font-weight: bold; position: absolute; top: 10px; right: 20px; }
+        .close-button:hover, .close-button:focus { color: var(--text-color); text-decoration: none; cursor: pointer; }
+        #uploadForm .form-group { margin-bottom: 1.5rem; text-align: left; }
+        #uploadForm textarea { resize: vertical; min-height: 120px; }
+        @media (max-width: 768px) { .hero-content h1 { font-size: 2.5rem; } nav ul { display: none; } .pricing-grid { grid-template-columns: 1fr; } }
+    </style>
+</head>
+<body>
+
+    <div class="top-banner" id="topBanner">
+        Save <strong>days</strong> of data analysis, get insights in <strong>hours</strong> with Apex Data.
+        <span class="top-banner-close" id="closeBanner">&times;</span>
+    </div>
+
+    <header>
+        <nav class="container">
+            <a href="index.html" class="logo"><i class="fas fa-chart-line"></i> Apex Data</a>
+            <ul>
+                <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="#deliverables">Sample</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero" id="hero">
+            <div class="hero-content">
+                <h1>AI-Powered Business Insights <span>from Raw Data in Just Hours</span></h1>
+                <p class="sub-headline">Trusted by professionals in retail, trading, and finance.</p>
+                <a href="#pricing" class="btn">Get Started</a>
+            </div>
+        </section>
+
+        <section id="how-it-works">
+            <div class="container">
+                <h2 class="section-title">Get Insights in 3 Simple Steps</h2>
+                <div class="how-it-works-grid">
+                    <div class="step-card">
+                        <i class="fas fa-mouse-pointer"></i>
+                        <h3>1. Pick a Plan or Try a Sample</h3>
+                        <p>Select the plan that fits your needs, or try our service for free with a small dataset.</p>
+                    </div>
+                    <div class="step-card">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <h3>2. Upload Your Data Securely</h3>
+                        <p>Submit your data file through our portal. We handle CSV, Excel, and JSON files.</p>
+                    </div>
+                    <div class="step-card">
+                        <i class="fas fa-file-alt"></i>
+                        <h3>3. Receive Your Report</h3>
+                        <p>Receive a comprehensive, professional report with visualizations and insights.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="deliverables">
+            <div class="container">
+                <h2 class="section-title">This Is What You'll Get</h2>
+                <p style="text-align:center; max-width: 700px; margin: -2rem auto 3rem auto; color: var(--text-color-light);">We transform your raw numbers into a clear, concise, and actionable report. Below is a sample of our standard output.</p>
+                <div class="deliverables-gallery">
+                    <img src="https://placehold.co/1100x600/E9ECEF/212529?text=Sample+Dashboard+Screenshot" alt="Sample Dashboard">
+                </div>
+                <div class="sample-report-cta">
+                    <p>Want a closer look? Download a complete sample report in PDF format.</p>
+                    <a href="#" class="btn">Download Sample Report (PDF)</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="security">
+            <div class="container">
+                <h2 class="section-title">Our Commitment to Your Privacy</h2>
+                <p style="text-align:center; max-width: 700px; margin: -2rem auto 3rem auto; color: var(--text-color-light);">
+                    Your data is protected with end-to-end encryption, processed on Google Cloud's secure infrastructure, and permanently deleted 24 hours after your report is delivered.
+                </p>
+                <div class="trust-grid">
+                    <div class="step-card">
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Data Encryption</h3>
+                        <p>All data is encrypted both in transit (using TLS) and at rest on our secure servers.</p>
+                    </div>
+                    <div class="step-card">
+                        <i class="fas fa-trash-alt"></i>
+                        <h3>Secure Deletion</h3>
+                        <p>Your uploaded data is permanently deleted from our systems 24 hours after your report is delivered.</p>
+                    </div>
+                    <div class="step-card">
+                        <i class="fas fa-file-signature"></i>
+                        <h3>Strict Confidentiality</h3>
+                        <p>We will never share, sell, or view your data for any purpose other than generating your insights.</p>
+                    </div>
+                </div>
+                <div style="text-align: center; margin-top: 3rem;">
+                    <a href="privacy.html" style="color: var(--primary-color);">Read our full Privacy & Data Handling Policy</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="pricing">
+            <div class="container">
+                <h2 class="section-title">Choose Your Plan</h2>
+                <div class="free-sample-cta">
+                    <h3>Want to see the magic first?</h3>
+                    <p>Get a free sample of our insights for any dataset up to 50 rows.</p>
+                    <button class="btn open-modal-btn" data-plan="Free Sample">🎯 Try Free Sample</button>
+                </div>
+                <div class="pricing-grid">
+                    <div class="pricing-card">
+                        <h3>Starter</h3>
+                        <div class="price">$100</div>
+                        <p>Perfect for startups, pilots, or one-time projects.</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Up to <strong>500 rows</strong> of data</li>
+                            <li><i class="fas fa-check-circle"></i>2-3 Key Insights & KPIs</li>
+                            <li><i class="fas fa-check-circle"></i>Core Visualizations (Charts & Graphs)</li>
+                            <li><i class="fas fa-check-circle"></i>Report delivered in PDF format</li>
+                            <li><i class="fas fa-check-circle"></i>Delivery within <strong>6 hours</strong></li>
+                        </ul>
+                        <button class="btn open-modal-btn" data-plan="Starter">🚀 Get My Report</button>
+                    </div>
+                    <div class="pricing-card">
+                        <h3>Pro</h3>
+                        <div class="price">$400</div>
+                        <p>For in-depth analysis and business-critical insights.</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i>Up to <strong>2000 rows</strong> of data</li>
+                            <li><i class="fas fa-check-circle"></i>Detailed Trend & Anomaly Analysis</li>
+                            <li><i class="fas fa-check-circle"></i>Advanced KPIs & Metrics</li>
+                            <li><i class="fas fa-check-circle"></i><strong>Interactive Dashboard</strong>
