--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APEX DATA: AI-Powered Business Insights — Boost Decisions in Hours</title>
     <style>
-        /* --- Color Palette: Tech / Dark Mode (HIGH CONTRAST) --- */
+        /* --- CORE STYLES --- */
         :root {
-            --bg-color: #0d1117;
+            --bg-color: #0d1117; /* Deep Black */
             --text-color: #ffffff;
-            --primary-accent: #00ffaa; /* Neon Green/Aqua */
+            --primary-accent: #00ffaa; /* Neon Green/Aqua - AI Glow */
             --secondary-accent: #007bff; /* Primary Blue for CTAs */
             --highlight-cta: #dc3545; /* Red/Urgency for Priority buttons */
-            --card-bg: #161b22;
+            --card-bg: #161b22; /* Slightly Lighter Dark Gray */
             --border-color: #30363d;
             --font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -24,6 +24,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
+            /* Subtle data background effect */
             background-image: radial-gradient(at 0% 0%, rgba(0, 255, 170, 0.1) 0%, transparent 50%),
                               radial-gradient(at 100% 100%, rgba(0, 123, 255, 0.08) 0%, transparent 60%);
             background-attachment: fixed;
@@ -34,9 +35,9 @@
             padding: 0 20px;
         }
 
-        /* --- Global Sections & Spacing --- */
+        /* --- Global Sections & Typography --- */
         section {
-            padding: 80px 0; /* Add more white space */
+            padding: 80px 0;
             border-bottom: 1px solid var(--border-color);
         }
         section:last-child {
@@ -47,6 +48,11 @@
             margin-bottom: 50px;
             color: var(--primary-accent);
             text-align: center;
+        }
+        h3 {
+            font-size: 1.5em;
+            margin-top: 0;
+            color: var(--text-color);
         }
 
         /* --- Header & Navigation --- */
@@ -60,6 +66,7 @@
             font-size: 1.8em;
             font-weight: 700;
             color: var(--primary-accent);
+            text-shadow: 0 0 5px rgba(0, 255, 170, 0.5);
         }
         .nav a {
             color: var(--text-color);
@@ -73,10 +80,14 @@
             color: var(--primary-accent);
             background-color: var(--border-color);
         }
+        .nav .external-link {
+            border: 1px solid var(--primary-accent);
+        }
         
         /* --- Hero Section --- */
         .hero {
             padding: 120px 0;
+            text-align: center;
         }
         .hero h1 {
             font-size: 3.8em;
@@ -91,8 +102,6 @@
             color: #aaa;
             margin-bottom: 30px;
         }
-
-        /* --- Free Sample CTA --- */
         .free-sample-cta {
             background-color: var(--secondary-accent);
             color: white;
@@ -154,17 +163,7 @@
             font-weight: bold;
             margin-right: 8px;
         }
-        .badge {
-            background-color: var(--highlight-cta);
-            color: white;
-            padding: 4px 10px;
-            border-radius: 5px;
-            font-size: 0.85em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            display: inline-block;
-        }
-
+        
         /* --- CTA Button Styles --- */
         .urgency-cta {
             display: block;
@@ -173,9 +172,14 @@
             border-radius: 5px;
             font-weight: bold;
             text-decoration: none;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
             text-align: center;
         }
         .btn-priority {
-            background-color: var(--highlight-cta); /* Red */
-            color:
+            background-color: var(--highlight-cta); /* Red - Highest Contrast for Urgency */
+            color: white;
+            transform: scale(1.02);
+            box-shadow: 0 4px 10px rgba(220, 53, 69, 0.4);
+        }
+        .btn-rush {
+            background-color: var(--secondary-accent); /* Blue - Second Tier
